--- a/jenkins/agent/Dockerfile
+++ b/jenkins/agent/Dockerfile
@@ -7,6 +7,9 @@ RUN apt-get update && apt-get install -y \
     curl \
     wget \
     git \
+    make \
+    python3 \
+    python3-pip \
     apt-transport-https \
     ca-certificates \
     gnupg \
