--- a/jenkins/agent/Dockerfile
+++ b/jenkins/agent/Dockerfile
@@ -10,6 +10,8 @@ RUN apt-get update && apt-get install -y \
     make \
     python3 \
     python3-pip \
+    nodejs \
+    npm \
     apt-transport-https \
     ca-certificates \
     gnupg \
