--- a/flux/infrastructure/staging/configs/postgresql.yaml
+++ b/flux/infrastructure/staging/configs/postgresql.yaml
@@ -4,8 +4,9 @@ metadata:
   name: bitnami
   namespace: flux-system
 spec:
+  type: oci
   interval: 1h
-  url: https://charts.bitnami.com/bitnami
+  url: oci://registry-1.docker.io/bitnamicharts
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
@@ -17,7 +18,7 @@ spec:
   chart:
     spec:
       chart: postgresql
-      version: ">=15.0.0"
+      version: "18.x.x"
       sourceRef:
         kind: HelmRepository
         name: bitnami
