--- a/flux/infrastructure/staging/configs/postgresql.yaml
+++ b/flux/infrastructure/staging/configs/postgresql.yaml
@@ -18,7 +18,7 @@ spec:
   chart:
     spec:
       chart: postgresql
-      version: "15.x.x"
+      version: "16.7.27"
       sourceRef:
         kind: HelmRepository
         name: bitnami
