--- a/flux/infrastructure/staging/controllers/traefik.yaml
+++ b/flux/infrastructure/staging/controllers/traefik.yaml
@@ -11,9 +11,10 @@ apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: traefik
-  namespace: traefik
+  namespace: flux-system
 spec:
   interval: 30m
+  targetNamespace: traefik
   chart:
     spec:
       chart: traefik
@@ -21,7 +22,6 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: traefik
-        namespace: flux-system
   install:
     createNamespace: true
   values:
